# patentfetcher

./: .gitignore  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
config/: __init__.py
deploy/docker/: Dockerfile
migrations/versions/: 62feba8d18e9_initial_migration.py
src/: app.py
src/patents/application/: fetch_patents_command_controller.py  fetch_patents_use_case.py
src/patents/application/adapter/: patent_acl_adapter.py
src/patents/domain/: patent.py  patent_repository.py
src/patents/infrastructure/: sqlalchemy_patent_repository.py
src/patents/infrastructure/adapter/: http_patent_acl_adapter.py
src/patents/infrastructure/models/: __init__.py  patent.py
tests/patents/application/: mock_patent_acl_adapter.py  test_fetch_patents_command_controller.py
tests/patents/infrastructure/adapter/: test_http_patent_acl_adpater.py
